[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tempus-fugit-minecraft"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "tempus_fugit_minecraft"}]

[tool.poetry.scripts]
minecraft = ""

[tool.poetry.dependencies]
python = "^3.7"
pyglet = "1.5.27"
exceptiongroup = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
